# direct_sht

./: .gitignore  Makefile  README.md  makefile_helper.py  meson.build  pyproject.toml
direct_sht/: __init__.py  direct_sht_core.py  tests.py  timing.py
include/: direct_sht.hpp
src_bin/: test-sht.cu  time-sht.cu
src_lib/: gpu_kernel.cu  reference_sht.cu
src_pybind11/: direct_sht_pybind11.cu
src_python/direct_sht/: __init__.py  __main__.py  direct_sht.py  direct_sht_core.py  tests.py  time_direct_sht.py  timing.py
