[build-system]
build-backend = 'mesonpy'
requires = [ 'meson-python' ]  # omitted most dependencies since I plan to use 'pip install --no-build-isolation'

[project]
name = 'direct_sht'
version = '0.0.1'
dependencies = [ 'meson-python', 'pybind11', 'healpy', 'cupy', 'numpy' ]
description = 'Direct SHT'
# readme = 'README.md'
# requires-python = '>=3.8'
# license = {file = 'LICENSE.txt'}
# authors = [ {name = 'Kendrick Smith', email = 'kmsmith@perimeterinstitute.ca'} ]

# https://meson-python.readthedocs.io/en/latest/how-to-guides/meson-args.html
[tool.meson-python.args]
setup = ['-Db_ndebug=false']  # don't compile with -DNDEBUG (which disables asserts)
compile = ['--verbose']       # only takes effect if 'pip install' is invoked with '-v' flag
