[project]
name = 'direct_sht'
version = '0.0.3'
dependencies = [ 'pybind11', 'healpy', 'numpy', 'ksgpu >= 1.0.3' ]
description = 'Direct SHT'
requires-python = '>=3.8'
# readme = 'README.md'
# license = {file = 'LICENSE.txt'}
# authors = [ {name = 'Kendrick Smith', email = 'kmsmith@perimeterinstitute.ca'} ]

[build-system]
build-backend = 'pipmake'
requires = [ 'pipmake >= 0.0.2', 'pybind11', 'numpy', 'ksgpu >= 1.0.3' ]

# NOTE: I decided not to specify 'cupy' as a dependency, in order to avoid triggering
# a pip install of cupy (since cupy is difficult to install with pip but straightforward
# with other tools, e.g. conda).
